Basic instagram feed. Raw code not styling

--- a/instagram.html
+++ b/instagram.html
@@ -9,9 +9,13 @@
 
 </head>
 
+
 <body>
 
 <h1>Latest from Instagram</h1>
+<div class="pics"></div>
+
+<a href="http://instagram.com/ksudac?ref=badge" class="ig-b- ig-b-v-24"><img src="//badges.instagram.com/static/images/ig-badge-view-24.png" alt="Instagram" /></a>
     
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="instagram.js"></script>
